add Logo, FullScreenActivity, BaseLifeCycle, ModelMainActivity, ViewMainActivity and PresenterMainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TaskAppLearn</string>
+    <string name="app_name">تسک سنج</string>
+    <string name="app_description">با اپلیکیشن تسک سنج کارهاتو مدیریت کن</string>
 </resources>
